fix markdown table background in dark mode

--- a/app/containers/codeArea/markdown.scss
+++ b/app/containers/codeArea/markdown.scss
@@ -225,13 +225,8 @@
     }
     table tr {
      border-top: 1px solid #cccccc;
-     background-color: white;
      margin: 0;
      padding: 0;
-    }
-
-    table tr:nth-child(2n) {
-     background-color: #f8f8f8;
     }
 
     table tr th {
